--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
     <section class="footer-1">
         <div class="sub-footer-1-1">
             <img src="img/logo-santos.png" alt="">
-            <p>Loja online oficial do Santos Futebol Clube.</p>
+            <h3>Feita por ALEJANDRO ORFANELLI SALGADO RODRIGUEZ</h3>
         </div>
         <div class="sub-footer-1-2">
             <h3>PRECISA DE AJUDA?</h3>
